# GemmaFit

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  TASKS.md  TASKS.zh-CN.md  _patch_fix_cells.py  build.gradle.kts  build_log.txt  build_output.txt  build_output10.txt  build_output11.txt  build_output12.txt  build_output2.txt  build_output3.txt  build_output4.txt  build_output5.txt  build_output6.txt  build_output7.txt  build_output8.txt  build_output9.txt  debug_logcat.txt  download_models.py  gradle.properties  gradlew.bat  implementation_plan.md  settings.gradle.kts
app/: build.gradle.kts  (+1 more)
native/: CMakeLists.txt
native/bridge/: kinematics_bridge.cpp  kinematics_bridge.h  kinematics_bridge_jni.cpp  llm_bridge.cpp  llm_bridge.h  llm_bridge_jni.cpp
native/build_local/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  GemmaFitNative.sln  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  gemmafit_bridge.vcxproj  gemmafit_bridge.vcxproj.filters  gemmafit_kinematics.vcxproj  gemmafit_kinematics.vcxproj.filters  test_com_tracker.vcxproj  test_com_tracker.vcxproj.filters  test_kinematics_pipeline.vcxproj  test_kinematics_pipeline.vcxproj.filters  test_motion_quality.vcxproj  test_motion_quality.vcxproj.filters  test_safety_monitor.vcxproj  test_safety_monitor.vcxproj.filters  test_subject_selector.vcxproj  test_subject_selector.vcxproj.filters
native/build_local/Release/: gemmafit_kinematics.lib
native/build_local/gemmafit_kinematics.dir/Release/gemmafit.FB89C1D1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
native/build_local/test_subject_selector.dir/Release/: test_subject_selector.exe.recipe
native/build_local/test_subject_selector.dir/Release/test_sub.8876AE26.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  test_subject_selector.lastbuildstate
native/kinematics/: body_segments.cpp  body_segments.h  com_tracker.cpp  com_tracker.h  confidence_gate.cpp  confidence_gate.h  joint_angles.cpp  joint_angles.h  motion_quality.cpp  motion_quality.h  movement_classifier.cpp  movement_classifier.h  muscle_focus.cpp  muscle_focus.h  safety_monitor.cpp  safety_monitor.h  subject_selector.cpp  subject_selector.h  symmetry.cpp  symmetry.h
native/tests/: test_com_tracker.cpp  test_kinematics_bridge.cpp  test_kinematics_pipeline.cpp  test_llm_bridge.cpp  test_motion_quality.cpp  test_safety_monitor.cpp  test_subject_selector.cpp
(+827 files in other folders)
